--- a/app/src/main/res/menu/logged_in_menu_key_gear.xml
+++ b/app/src/main/res/menu/logged_in_menu_key_gear.xml
@@ -1,12 +1,12 @@
 <?xml version="1.0" encoding="utf-8"?>
 <menu xmlns:android="http://schemas.android.com/apk/res/android">
     <item
-        android:id="@+id/dashboard"
+        android:id="@+id/home"
         android:icon="@drawable/ic_home"
         android:title="@string/TAB_TITLE_HOME" />
 
     <item
-        android:id="@+id/claims"
+        android:id="@+id/insurance"
         android:icon="@drawable/ic_claims"
         android:title="@string/TAB_TITLE_CLAIM" />
 
