--- a/app/src/main/res/layout/home_big_text.xml
+++ b/app/src/main/res/layout/home_big_text.xml
@@ -2,7 +2,7 @@
 <TextView xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
+    android:layout_height="wrap_content"
     android:layout_marginStart="@dimen/base_margin_triple"
     android:layout_marginTop="@dimen/base_margin_octuple"
     android:layout_marginEnd="@dimen/base_margin_triple"
