Add error state when member is in an invalid state
More specifically when there is no first name, which is an invariant.

--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -127,5 +127,6 @@
     <dimen name="referral_icon_placeholder_size">16dp</dimen>
     <dimen name="small_component_corner_radius">4dp</dimen>
     <dimen name="numbered_bullet_background_sphere_size">32sp</dimen>
+    <dimen name="home_error_icon_size">32dp</dimen>
 
 </resources>
