--- a/app/src/main/res/layout/home_body_text.xml
+++ b/app/src/main/res/layout/home_body_text.xml
@@ -1,4 +1,4 @@
-<?xml version="1.0" encoding="utf-8"?><!-- TODO: Should we choose different keys although they contain the same copy? Hmm. -->
+<?xml version="1.0" encoding="utf-8"?>
 <TextView xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
