--- a/app/src/main/res/menu/logged_in_menu_key_gear.xml
+++ b/app/src/main/res/menu/logged_in_menu_key_gear.xml
@@ -2,7 +2,7 @@
 <menu xmlns:android="http://schemas.android.com/apk/res/android">
     <item
         android:id="@+id/home"
-        android:icon="@drawable/ic_home"
+        android:icon="@drawable/ic_home_active"
         android:title="@string/TAB_TITLE_HOME" />
 
     <item
