--- a/app/src/main/res/drawable/ic_profile.xml
+++ b/app/src/main/res/drawable/ic_profile.xml
@@ -1,3 +1,16 @@
-<vector xmlns:android="http://schemas.android.com/apk/res/android" android:width="24dp" android:height="24dp" android:viewportWidth="24" android:viewportHeight="24">
-    <path android:pathData="M18.005 5.9c1.046 0 1.922 0.77 2.072 1.788l0.017 0.155 0.006 0.152v8.01c0 1.046-0.77 1.922-1.788 2.072l-0.155 0.017-0.152 0.006H5.995c-1.046 0-1.922-0.77-2.072-1.788l-0.018-0.155L3.9 16.005v-8.01c0-1.046 0.77-1.922 1.788-2.072l0.155-0.018L5.995 5.9h12.01zm0 0.95H5.995c-0.546 0-1.01 0.386-1.12 0.902L4.856 7.873 4.85 7.995v8.01c0 0.546 0.386 1.01 0.902 1.12l0.121 0.019 0.122 0.006h12.01c0.546 0 1.01-0.386 1.12-0.902l0.019-0.121 0.006-0.122v-8.01c0-0.631-0.514-1.145-1.145-1.145zm-9.32 5.49c1.3 0 2.38 0.889 2.614 2.15 0.08 0.435-0.197 0.848-0.617 0.958l-0.107 0.02-0.103 0.007H6.899c-0.523 0-0.923-0.473-0.827-0.985 0.234-1.261 1.314-2.15 2.613-2.15zm4.816 1.695l0.1 0.1v0.75l-0.1 0.1H12l-0.1-0.1v-0.75l0.1-0.1h1.5zm4 0l0.1 0.1v0.75l-0.1 0.1h-3l-0.1-0.1v-0.75l0.1-0.1h3zM8.685 13.29c-0.737 0-1.359 0.432-1.6 1.086l-0.048 0.148h3.295l-0.04-0.129c-0.19-0.53-0.627-0.921-1.177-1.054l-0.152-0.03-0.148-0.017-0.13-0.004zm7.816-0.921l0.1 0.1v0.75l-0.1 0.1H12l-0.1-0.1v-0.75l0.1-0.1h4.5zM8.685 8.524c0.942 0 1.705 0.764 1.705 1.705 0 0.942-0.763 1.705-1.705 1.705-0.942 0-1.705-0.763-1.705-1.705 0-0.942 0.764-1.705 1.705-1.705zm8.816 2.177l0.1 0.1v0.75l-0.1 0.1H12l-0.1-0.1v-0.75l0.1-0.1h5.5zM8.685 9.475c-0.417 0-0.755 0.338-0.755 0.755s0.338 0.755 0.755 0.755 0.755-0.338 0.755-0.755-0.338-0.755-0.755-0.755zm8.816-0.44l0.1 0.1v0.75l-0.1 0.1H12l-0.1-0.1v-0.75l0.1-0.1h5.5z" android:fillColor="?colorPrimary"/>
+<vector xmlns:android="http://schemas.android.com/apk/res/android"
+    android:width="24dp"
+    android:height="24dp"
+    android:viewportWidth="24"
+    android:viewportHeight="24">
+  <path
+      android:strokeWidth="1"
+      android:pathData="M12.0001,2.5C9.5148,2.5 7.5001,4.5147 7.5001,7C7.5001,9.4853 9.5148,11.5 12.0001,11.5C14.4854,11.5 16.5001,9.4853 16.5001,7C16.5001,4.5147 14.4854,2.5 12.0001,2.5Z"
+      android:fillColor="@color/bottom_navigation_icon_fill_color_state"
+      android:strokeColor="@color/bottom_navigation_icon_stroke_color_state"/>
+  <path
+      android:strokeWidth="1"
+      android:pathData="M12.0001,13C8.2816,13 5.1353,15.6308 4.5303,19.0346C4.3331,20.0261 5.1242,21 6.1382,21H17.862C18.8754,21 19.6661,20.0274 19.4703,19.0365C18.8646,15.4849 15.7089,13 12.0001,13Z"
+      android:fillColor="@color/bottom_navigation_icon_fill_color_state"
+      android:strokeColor="@color/bottom_navigation_icon_stroke_color_state"/>
 </vector>
