--- a/app/src/main/res/drawable/ic_home_active.xml
+++ b/app/src/main/res/drawable/ic_home_active.xml
@@ -1,10 +1,3 @@
-<vector xmlns:android="http://schemas.android.com/apk/res/android"
-    android:width="24dp"
-    android:height="24dp"
-    android:viewportWidth="24"
-    android:viewportHeight="24">
-  <path
-      android:pathData="M1.5,12C1.5,6.201 6.201,1.5 12,1.5C17.799,1.5 22.5,6.201 22.5,12C22.5,17.799 17.799,22.5 12,22.5C6.201,22.5 1.5,17.799 1.5,12ZM13.3965,5.4591L5.459,13.3966L6.1661,14.1037L9.7812,10.4885L13.4492,14.1565L9.834,17.7717L10.5411,18.4788L18.4786,10.5413L17.7715,9.8342L14.1563,13.4494L10.4883,9.7814L14.1036,6.1662L13.3965,5.4591Z"
-      android:fillColor="#121212"
-      android:fillType="evenOdd"/>
+<vector xmlns:android="http://schemas.android.com/apk/res/android" android:width="24dp" android:height="24dp" android:viewportWidth="24" android:viewportHeight="24">
+    <path android:pathData="M1.5 12C1.5 6.201 6.201 1.5 12 1.5S22.5 6.201 22.5 12 17.799 22.5 12 22.5 1.5 17.799 1.5 12zm11.896-6.54L5.46 13.396l0.707 0.707 3.615-3.615 3.668 3.667-3.615 3.616 0.707 0.707 7.938-7.938-0.707-0.707-3.616 3.615-3.668-3.668 3.616-3.615-0.707-0.707z" android:fillColor="#121212" android:fillType="evenOdd"/>
 </vector>
