--- a/app/src/main/res/menu/logged_in_menu_no_referrals.xml
+++ b/app/src/main/res/menu/logged_in_menu_no_referrals.xml
@@ -2,16 +2,16 @@
 <menu xmlns:android="http://schemas.android.com/apk/res/android">
     <item
         android:id="@+id/home"
-        android:icon="@drawable/ic_home"
-        android:title="@string/TAB_TITLE_HOME" />
+        android:icon="@drawable/ic_home_selector"
+        android:title="@string/home_tab.title" />
 
     <item
         android:id="@+id/insurance"
-        android:icon="@drawable/ic_claims"
-        android:title="@string/TAB_TITLE_CLAIM" />
+        android:icon="@drawable/ic_insurance_selector"
+        android:title="@string/insurances_tab.title" />
 
     <item
         android:id="@+id/profile"
-        android:icon="@drawable/ic_profile"
+        android:icon="@drawable/ic_profile_selector"
         android:title="@string/TAB_TITLE_PROFILE" />
 </menu>
