--- a/app/src/main/res/layout/home_common_claim.xml
+++ b/app/src/main/res/layout/home_common_claim.xml
@@ -1,8 +1,11 @@
 <?xml version="1.0" encoding="utf-8"?>
-<com.hedvig.app.ui.view.HedvigCardView xmlns:android="http://schemas.android.com/apk/res/android"
+<com.google.android.material.card.MaterialCardView xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
-    android:layout_height="wrap_content">
+    android:layout_height="wrap_content"
+    android:layout_marginTop="@dimen/base_margin"
+    tools:layout_margin="@dimen/base_margin"
+    tools:layout_width="160dp">
 
     <LinearLayout
         android:layout_width="match_parent"
@@ -12,7 +15,7 @@
         android:orientation="vertical">
 
         <ImageView
-            android:id="@+id/commonClaimCellIcon"
+            android:id="@+id/icon"
             android:layout_width="@dimen/common_claim_icon_size"
             android:layout_height="@dimen/common_claim_icon_size"
             android:contentDescription="@null"
@@ -24,9 +27,11 @@
             android:layout_weight="1" />
 
         <TextView
-            android:id="@+id/commonClaimCellLabel"
+            android:id="@+id/label"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
+            android:textAppearance="?textAppearanceSubtitle1"
             tools:text="Drulle" />
     </LinearLayout>
-</com.hedvig.app.ui.view.HedvigCardView>
+
+</com.google.android.material.card.MaterialCardView>
