--- a/app/src/main/res/layout/home_common_claim_title.xml
+++ b/app/src/main/res/layout/home_common_claim_title.xml
@@ -6,4 +6,5 @@
     android:layout_marginStart="@dimen/base_margin_triple"
     android:layout_marginTop="@dimen/base_margin_dectuple"
     android:layout_marginEnd="@dimen/base_margin_triple"
+    android:layout_marginBottom="@dimen/base_margin"
     android:text="@string/home_tab.common_claims_title" />
