--- a/app/src/main/res/menu/logged_in_menu_key_gear.xml
+++ b/app/src/main/res/menu/logged_in_menu_key_gear.xml
@@ -2,26 +2,26 @@
 <menu xmlns:android="http://schemas.android.com/apk/res/android">
     <item
         android:id="@+id/home"
-        android:icon="@drawable/ic_home_selector"
+        android:icon="@drawable/ic_home"
         android:title="@string/home_tab.title" />
 
     <item
         android:id="@+id/insurance"
-        android:icon="@drawable/ic_insurance_selector"
+        android:icon="@drawable/ic_insurance"
         android:title="@string/insurances_tab.title" />
 
     <item
         android:id="@+id/key_gear"
-        android:icon="@drawable/ic_key_gear_selector"
+        android:icon="@drawable/ic_key_gear"
         android:title="@string/KEY_GEAR_TAB_TITLE" />
 
     <item
         android:id="@+id/referrals"
-        android:icon="@drawable/ic_forever_selector"
+        android:icon="@drawable/ic_forever"
         android:title="@string/TAB_REFERRALS_TITLE" />
 
     <item
         android:id="@+id/profile"
-        android:icon="@drawable/ic_profile_selector"
+        android:icon="@drawable/ic_profile"
         android:title="@string/TAB_TITLE_PROFILE" />
 </menu>
