--- a/app/src/main/res/color/bottom_navigation_icon_forever_fill_state.xml
+++ b/app/src/main/res/color/bottom_navigation_icon_forever_fill_state.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
 <selector xmlns:android="http://schemas.android.com/apk/res/android">
-    <item android:color="@color/hedvig_black" android:state_checked="true" />
-    <item android:color="@color/caption_light" />
+    <item android:color="?colorPrimary" android:state_checked="true" />
+    <item android:color="@color/grey_inactive" />
 </selector>
