--- a/app/src/main/res/color/bottom_navigation_icon_stroke_color_state.xml
+++ b/app/src/main/res/color/bottom_navigation_icon_stroke_color_state.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
 <selector xmlns:android="http://schemas.android.com/apk/res/android">
-    <item android:color="@color/hedvig_white" android:state_checked="true" />
-    <item android:color="@color/caption_light" />
+    <item android:color="?colorOnPrimary" android:state_checked="true" />
+    <item android:color="@color/grey_inactive" />
 </selector>
