Fix a text TODO

--- a/app/src/main/res/layout/home_start_claim_outlined.xml
+++ b/app/src/main/res/layout/home_start_claim_outlined.xml
@@ -6,4 +6,4 @@
     android:layout_marginStart="@dimen/base_margin_double"
     android:layout_marginTop="@dimen/base_margin_triple"
     android:layout_marginEnd="@dimen/base_margin_double"
-    android:text="TODO START CLAIM" />
+    android:text="@string/home_tab.claim_button_text" />
