--- a/app/src/main/res/values-night/colors_dark.xml
+++ b/app/src/main/res/values-night/colors_dark.xml
@@ -13,6 +13,7 @@
     <item name="colorSecondary" type="color">@color/lavender_400</item>
     <item name="colorOnSecondary" type="color">@color/hedvig_white</item>
     <item name="colorPlaceholder" type="color">#45FAFAFA</item>
+    <item name="colorWarning" type="color">#e3b945</item>
 
     <item name="colorError" type="color">#E24646</item>
 
