--- a/app/src/main/res/drawable/ic_apartment.xml
+++ b/app/src/main/res/drawable/ic_apartment.xml
@@ -1,6 +1,4 @@
-<vector xmlns:android="http://schemas.android.com/apk/res/android" android:width="22dp" android:height="26dp" android:viewportWidth="22" android:viewportHeight="26">
-    <path android:pathData="M3 1.5h16v23H3z" android:strokeWidth="1.33" android:strokeColor="?colorPrimary" android:fillType="evenOdd"/>
-    <path android:pathData="M1 24.5h20" android:strokeWidth="1.33" android:strokeColor="?colorPrimary" android:fillType="evenOdd" android:strokeLineCap="square"/>
-    <path android:pathData="M9 19.5h4v5H9zm-3.333-4h2.666m-2.666-2.667h2.666" android:strokeWidth="1.33" android:strokeColor="?colorPrimary" android:fillType="evenOdd"/>
-    <path android:pathData="M9.667 15.5h2.666m-2.666-2.667h2.666m1.334 2.667h2.666m-2.666-2.667h2.666M5.667 10.167h2.666m1.334 0h2.666m1.334 0h2.666M5.667 7.5h2.666m1.334 0h2.666m1.334 0h2.666M5.667 4.833h2.666m1.334 0h2.666m1.334 0h2.666" android:strokeWidth="1.33" android:strokeColor="?colorPrimary" android:fillType="evenOdd"/>
+<vector xmlns:android="http://schemas.android.com/apk/res/android" android:width="24dp" android:height="24dp" android:viewportWidth="24" android:viewportHeight="24">
+    <path android:strokeWidth="1" android:pathData="M15.182 14.8H8.754V22h6.428v-7.2zM3 22h18M10.836 11.632h2.424M6.934 11.6h2.417m5.221 0h2.417m-6.153-3.168h2.424M6.934 8.4h2.417m5.221 0h2.417m-6.153-3.168h2.424M6.934 5.2h2.417m5.221 0h2.417m-5.021 9.6v7.04" android:strokeColor="?colorPrimary"/>
+    <path android:strokeWidth="1" android:pathData="M19.232 21.84V2H4.768v19.84" android:strokeColor="?colorPrimary"/>
 </vector>
