--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -8,6 +8,7 @@
 
     <style name="Hedvig.Theme.LoggedIn">
         <item name="android:navigationBarColor">@color/color_background_95</item>
+        <item name="android:statusBarColor">@color/transparent</item>
     </style>
 
     <style name="Hedvig.Theme.Chat">
