WIP: Re-add rows to Profile Tab

--- a/app/src/main/res/layout/profile_fragment.xml
+++ b/app/src/main/res/layout/profile_fragment.xml
@@ -8,4 +8,4 @@
     app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
     tools:context=".feature.profile.ui.ProfileFragment"
     tools:itemCount="3"
-    tools:listitem="@layout/profile_menu_row" />
+    tools:listitem="@layout/profile_row" />
