--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -45,4 +45,6 @@
     <color name="forever_orange_300">#FCBA8D</color>
     <color name="forever_orange_500">#FE9650</color>
 
+    <color name="text_color_primary_light">#ABFAFAFA</color>
+
 </resources>
