--- a/app/src/main/res/values/widget_themes.xml
+++ b/app/src/main/res/values/widget_themes.xml
@@ -46,7 +46,7 @@
     <style name="ThemeOverlay.Hedvig.WarningCard" parent="">
         <item name="colorSurface">?colorWarning</item>
         <item name="colorPrimary">@color/hedvig_black</item>
-        <item name="android:textColorPrimary">#AB121212</item>
+        <item name="android:textColorPrimary">@color/text_color_primary_light</item>
         <item name="android:textColorSecondary">@color/hedvig_black</item>
         <item name="colorOnSurface">?colorPrimary</item>
     </style>
