--- a/app/src/main/res/layout/activity_contract_coverage_detail.xml
+++ b/app/src/main/res/layout/activity_contract_coverage_detail.xml
@@ -5,7 +5,7 @@
     android:id="@+id/root"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".feature.dashboard.ui.contractcoverage.ContractCoverageActivity">
+    tools:context=".feature.insurance.ui.contractcoverage.ContractCoverageActivity">
 
     <ProgressBar
         android:id="@+id/loadingSpinner"
