--- a/app/src/main/res/layout/activity_contract_detail.xml
+++ b/app/src/main/res/layout/activity_contract_detail.xml
@@ -6,7 +6,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical"
-    tools:context=".feature.dashboard.ui.contractdetail.ContractDetailActivity">
+    tools:context=".feature.insurance.ui.contractdetail.ContractDetailActivity">
 
     <androidx.core.widget.NestedScrollView
         android:id="@+id/scrollView"
