--- a/app/src/main/res/layout/fragment_insurance.xml
+++ b/app/src/main/res/layout/fragment_insurance.xml
@@ -7,13 +7,14 @@
     tools:context=".feature.insurance.ui.InsuranceFragment">
 
     <include
+        android:id="@+id/loadSpinner"
         layout="@layout/loading_spinner"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_gravity="center" />
 
     <androidx.recyclerview.widget.RecyclerView
-        android:id="@+id/root"
+        android:id="@+id/recycler"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:clipToPadding="false"
