--- a/app/src/main/res/values/widget_themes.xml
+++ b/app/src/main/res/values/widget_themes.xml
@@ -51,4 +51,12 @@
         <item name="colorOnSurface">?colorPrimary</item>
     </style>
 
+    <style name="ThemeOverlay.Hedvig.RenewalCard" parent="">
+        <item name="colorSurface">@color/colorInfoCardSurface</item>
+        <item name="colorPrimary">@color/hedvig_black</item>
+        <item name="android:textColorPrimary">@color/text_color_primary_light</item>
+        <item name="android:textColorSecondary">@color/hedvig_black</item>
+        <item name="colorOnSurface">?colorPrimary</item>
+    </style>
+
 </resources>
