Repair some tests

--- a/app/src/main/res/layout/fragment_insurance.xml
+++ b/app/src/main/res/layout/fragment_insurance.xml
@@ -14,7 +14,7 @@
         android:layout_gravity="center" />
 
     <androidx.recyclerview.widget.RecyclerView
-        android:id="@+id/recycler"
+        android:id="@+id/insuranceRecycler"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:clipToPadding="false"
