--- a/app/src/main/res/values/widget_themes.xml
+++ b/app/src/main/res/values/widget_themes.xml
@@ -49,6 +49,7 @@
         <item name="android:textColorPrimary">@color/text_color_primary_light</item>
         <item name="android:textColorSecondary">@color/hedvig_black</item>
         <item name="colorOnSurface">?colorPrimary</item>
+        <item name="textColorLink">?android:textColorSecondary</item>
     </style>
 
     <style name="ThemeOverlay.Hedvig.RenewalCard" parent="">
