--- a/app/src/main/res/layout/profile_subtitle.xml
+++ b/app/src/main/res/layout/profile_subtitle.xml
@@ -5,5 +5,6 @@
     android:layout_marginStart="@dimen/base_margin_triple"
     android:layout_marginTop="@dimen/base_margin_septuple"
     android:layout_marginEnd="@dimen/base_margin_triple"
+    android:layout_marginBottom="@dimen/base_margin_half"
     android:text="@string/profile.appSettingsSection.title"
     android:textAppearance="?textAppearanceHeadline5" />
