--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -129,5 +129,6 @@
     <dimen name="small_component_corner_radius">4dp</dimen>
     <dimen name="numbered_bullet_background_sphere_size">32sp</dimen>
     <dimen name="home_error_icon_size">32dp</dimen>
+    <dimen name="logged_in_toolbar_height">80dp</dimen>
 
 </resources>
