--- a/app/src/main/res/layout/menu_chat_icon.xml
+++ b/app/src/main/res/layout/menu_chat_icon.xml
@@ -1,5 +1,17 @@
 <?xml version="1.0" encoding="utf-8"?>
 <FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:layout_width="match_parent" android:layout_height="match_parent">
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    android:layout_width="wrap_content"
+    android:layout_height="wrap_content"
+    android:paddingEnd="@dimen/base_margin_double">
 
+    <ImageView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_gravity="center"
+        app:tint="@android:color/transparent"
+        app:tintMode="src_in"
+        android:background="@drawable/ic_chat_ripple"
+        android:contentDescription="@string/DASHBOARD_OPEN_CHAT"
+        app:srcCompat="@drawable/ic_chat" />
 </FrameLayout>
