--- a/app/src/main/res/menu/base_tab_menu.xml
+++ b/app/src/main/res/menu/base_tab_menu.xml
@@ -3,8 +3,8 @@
     xmlns:app="http://schemas.android.com/apk/res-auto">
     <item
         android:id="@+id/openChat"
-        android:icon="@drawable/ic_chat"
         android:orderInCategory="1"
         android:title="@string/DASHBOARD_OPEN_CHAT"
+        app:actionLayout="@layout/menu_chat_icon"
         app:showAsAction="always" />
 </menu>
