--- a/app/src/main/res/layout/fragment_dismissable_pager.xml
+++ b/app/src/main/res/layout/fragment_dismissable_pager.xml
@@ -22,7 +22,6 @@
             android:background="?attr/selectableItemBackgroundBorderless"
             android:contentDescription="@string/NEWS_CLOSE_DESCRIPTION"
             android:padding="@dimen/base_margin_half"
-            android:tint="@color/icon_tint"
             app:srcCompat="@drawable/ic_close" />
 
         <TextView
@@ -50,7 +49,7 @@
 
     <Button
         android:id="@+id/proceed"
-        style="@style/Hedvig.Button.Large"
+        style="?materialButtonContainedLargeStyle"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginStart="@dimen/base_margin_double"
