--- a/app/src/main/res/menu/referral_more_info_menu.xml
+++ b/app/src/main/res/menu/referral_more_info_menu.xml
@@ -3,8 +3,8 @@
     xmlns:app="http://schemas.android.com/apk/res-auto">
     <item
         android:id="@+id/referralMoreInfo"
-        android:icon="@drawable/ic_info_toolbar"
         android:orderInCategory="1"
         android:title="@string/REFERRALS_INFO_BUTTON_CONTENT_DESCRIPTION"
+        app:actionLayout="@layout/menu_info_icon"
         app:showAsAction="always" />
 </menu>
