- Add fade through-transition when switching tabs on logged in - Replace viewpager-based tab solution with a simple `FragmentContainerView`-based solution

--- a/app/src/main/res/layout/activity_logged_in.xml
+++ b/app/src/main/res/layout/activity_logged_in.xml
@@ -19,11 +19,10 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
-    <com.hedvig.app.feature.loggedin.ui.TabPager
+    <androidx.fragment.app.FragmentContainerView
         android:id="@+id/tabContent"
         android:layout_width="0dp"
         android:layout_height="0dp"
-        android:clipToPadding="false"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
