--- a/app/src/main/res/layout/how_claims_work_button.xml
+++ b/app/src/main/res/layout/how_claims_work_button.xml
@@ -1,9 +1,10 @@
 <?xml version="1.0" encoding="utf-8"?>
 <FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="wrap_content">
-
-    <Button xmlns:app="http://schemas.android.com/apk/res-auto"
+    <!-- TODO: text key -->
+    <Button
         android:id="@+id/button"
         style="?materialButtonTextStyle"
         android:layout_width="wrap_content"
