--- a/app/src/main/res/values/shape_themes.xml
+++ b/app/src/main/res/values/shape_themes.xml
@@ -13,6 +13,8 @@
         <item name="cornerFamily">rounded</item>
         <item name="cornerSizeTopLeft">@dimen/bottom_sheet_corner_radius</item>
         <item name="cornerSizeTopRight">@dimen/bottom_sheet_corner_radius</item>
+        <item name="cornerSizeBottomLeft">0dp</item>
+        <item name="cornerSizeBottomRight">0dp</item>
     </style>
 
 </resources>
