--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -31,6 +31,7 @@
     <style name="Hedvig.Theme.Splash">
         <item name="android:windowLightStatusBar">false</item>
         <item name="android:windowBackground">@drawable/splash_background</item>
+        <item name="android:navigationBarColor">@color/hedvig_black</item>
     </style>
 
     <style name="FullScreenDialog" parent="Hedvig.Theme">
