--- a/app/src/main/res/layout/fragment_dismissable_pager.xml
+++ b/app/src/main/res/layout/fragment_dismissable_pager.xml
@@ -11,7 +11,8 @@
     <FrameLayout
         android:id="@+id/topBar"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content">
+        android:layout_height="wrap_content"
+        android:paddingTop="@dimen/base_margin">
 
         <ImageView
             android:id="@+id/close"
