--- a/app/src/main/res/layout/dismissible_page_no_title_fragment.xml
+++ b/app/src/main/res/layout/dismissible_page_no_title_fragment.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
@@ -8,26 +9,28 @@
 
     <ImageView
         android:id="@+id/illustration"
-        android:layout_width="match_parent"
-        android:layout_height="0dp"
-        android:layout_gravity="center_horizontal"
-        android:layout_marginStart="@dimen/base_margin_triple"
-        android:layout_marginEnd="@dimen/base_margin_triple"
-        android:layout_weight="1"
+        android:layout_width="@dimen/dismissible_page_illustration_size"
+        android:layout_height="@dimen/dismissible_page_illustration_size"
         android:contentDescription="@null"
+        android:maxHeight="200dp"
         android:scaleType="fitCenter"
+        app:layout_constraintBottom_toTopOf="@+id/paragraph"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
         tools:src="@tools:sample/backgrounds/scenic" />
 
     <TextView
         android:id="@+id/paragraph"
-        android:layout_width="wrap_content"
+        android:layout_width="0dp"
         android:layout_height="wrap_content"
-        android:layout_gravity="center_horizontal"
-        android:layout_marginStart="@dimen/base_margin_triple"
-        android:layout_marginEnd="@dimen/base_margin_triple"
-        android:layout_marginBottom="@dimen/base_margin_triple"
+        android:layout_marginHorizontal="@dimen/base_margin_triple"
         android:gravity="center_horizontal"
         android:textAppearance="?textAppearanceHeadline6"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@id/illustration"
         tools:text="Hedvig blir bättre när du får dela det med dina vänner! Du och dina vänner får 10 kr lägre månadskostnad – för varje vän!" />
 
-</LinearLayout>
+</androidx.constraintlayout.widget.ConstraintLayout>
