--- a/app/src/main/res/layout/psa_box.xml
+++ b/app/src/main/res/layout/psa_box.xml
@@ -23,9 +23,10 @@
         android:id="@+id/arrow"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_marginEnd="@dimen/base_margin_double"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toEndOf="@+id/textView"
+        app:layout_constraintStart_toEndOf="@+id/body"
         app:layout_constraintTop_toTopOf="parent"
-        app:srcCompat="@drawable/icon_navigate_next" />
+        app:srcCompat="@drawable/ic_forward" />
 </androidx.constraintlayout.widget.ConstraintLayout>
