--- a/app/src/main/res/values/colors_light.xml
+++ b/app/src/main/res/values/colors_light.xml
@@ -32,6 +32,8 @@
 
     <item name="colorInfoCardSurface" type="color">@color/lavender_100</item>
 
+    <item name="colorTooltip" type="color">@color/lavender_300</item>
+
     <!-- Compatibility with Adyen -->
     <item name="primaryColor" type="color">@color/colorPrimary</item>
     <item name="textColor" type="color">@color/textColorPrimary</item>
